--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "dependencies": {
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
